feat: Google-like search with dropdown, debouncing, and UI improvements

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -44,6 +44,8 @@
     "seeAll": "See all",
     "noResults": "No results found",
     "searchPlaceholder": "Search...",
+    "searchEmails": "Search your emails...",
+    "searchNewsletters": "Search newsletters...",
     "all": "All",
     "unread": "Unread",
     "read": "Read",
